分析为什么封装时间字符串函数

--- a/doc/03为什么用户相关功能分多个路由.md
+++ b/doc/03为什么用户相关功能分多个路由.md
@@ -7,7 +7,7 @@
 将用户相关的功能分成多个路由（如`/api/auth`和`/api/user`）是一种常见的设计模式，成为「职责分离」。
 这种设计不仅有助于代码的结构化和组织化，还带来了其他几个重要的好处。让我们来详细探讨一下：
 
-### 1. 指责分离 
+### 1. 职责分离 
 将不同功能模块放在不同路由有助于将逻辑指责明确分离。例如
 * `/api/auth` 路由：处理与用户身份验证相关的所有操作，如注册、登录、登出。这些操作通常涉及
 用户身份验证和会话管理功能。
