init(web): 设置React、TypeScript和Vite项目
创建了一个新的Vite项目，启用了TypeScript和React集成。配置了ESLint规则、VSCode和Idea的编辑器支持文件，设定了依赖项和dev依赖项，创建了基本的文件结构，并确保了开箱即用的体验。

--- a/web/doc/01创建一个项目.md
+++ b/web/doc/01创建一个项目.md
@@ -11,7 +11,17 @@ node -v
 npm create vite@latest
 ```
 
-选择创建react
+选择创建
+* react
+* TypeScript
+
+然后执行
+```shell
+  cd web
+  npm install #安装
+  npm run dev
+
+```
 
 
 #### 补充: 切换npm源
