构建井字棋游戏的初始界面

--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -40,3 +40,63 @@ import App from './App' // 您在App.js中创建的组件
 ```
 
 文件的其余部分将将所有组件组合在一起，并将最终产品注入public文件的index.html中
+
+### 构建Board
+
+让我们回到App.js。
+
+目前棋盘只有一个方格，但你需要九个！但是如果直接复制粘贴，会报错
+```javascript
+export default function Square() {
+    return <button className="square">X</button><button className="square">X</button>
+}
+```
+
+```
+/src/App.js: Adjacent JSX elements must be wrapped in an enclosing tag. Did you want a JSX Fragment <>...</>?
+```
+
+React要求返回单个元素，解决这个问题，你可以用判断`<>`和`</>`来包装多个相邻的JSX元素
+
+```javascript
+export default function Square(){
+    return (
+        <>
+            <button className="square">X</button>
+            <button className="square">X</button>
+        </>
+    )
+}
+```
+
+复制九个我们发现变成一行了，这不是我们想要的棋盘网格
+
+要解决这个问题，我们需要用<div>将方块分组并添加一些CSS类，当您执行时，您将为每个方块制定一个位置，以确保方块的位置
+
+在App.js文件中，更新Square组件，如下
+
+```javascript
+export default function Square(){
+    return (
+        <>
+            <div className="board-row">
+                <button className="square">1</button>
+                <button className="square">2</button>
+                <button className="square">3</button>
+            </div>
+            <div className="board-row">
+                <button className="square">4</button>
+                <button className="square">5</button>
+                <button className="square">6</button>
+            </div>
+            <div className="board-row">
+                <button className="square">7</button>
+                <button className="square">8</button>
+                <button className="square">9</button>
+            </div>
+        </>
+    )
+}
+```
+
+在style.css里面定义CSS使用board-row的className对div进行样式设置，然后就是因为原来的不再是正方形了，我们改名为Board()
