--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -100,3 +100,63 @@ export default function Square(){
 ```
 
 在style.css里面定义CSS使用board-row的className对div进行样式设置，然后就是因为原来的不再是正方形了，我们改名为Board()
+
+```javascript
+
+function Square(){
+    return <button className="square">1</button>
+}
+
+export default function Board(){
+    return(
+        <>
+            <div className="board-row">
+                <Square/>
+                <Square/>
+                <Square/>
+            </div>
+            <div className="board-row">
+                <Square/>
+                <Square/>
+                <Square/>
+            </div>
+            <div className="board-row">
+                <Square/>
+                <Square/>
+                <Square/>
+            </div>
+        </>
+    )
+}
+
+```
+
+这是我们看到都是111，我们希望传值成为123456789，用JSX的{value}传入值
+
+```javascript
+function Square({value}){
+    return <button className="square">{value}</button>
+}
+
+export default function Board(){
+    return(
+        <>
+            <div className="board-row">
+                <Square value="1"/>
+                <Square value="2"/>
+                <Square value="3"/>
+            </div>
+            <div className="board-row">
+                <Square value="4"/>
+                <Square value="5"/>
+                <Square value="6"/>
+            </div>
+            <div className="board-row">
+                <Square value="7"/>
+                <Square value="8"/>
+                <Square value="9"/>
+            </div>
+        </>
+    )
+}
+```
