feat(web): 添加交互式井字游戏组件

--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -160,3 +160,61 @@ export default function Board(){
     )
 }
 ```
+
+### 制作一个交互组件
+
+
+```javascript
+function Square({value}) {
+    function handleClient() {
+        console.log('clieck!');
+    }
+
+    return (
+        <button
+            className="square"
+            onClieck={handleClieck} 
+        >
+
+        </button>
+    )
+}
+```
+
+React 有一个useStatue特殊函数，你可以从组件中调用这个函数，让他记住事物，
+
+```javascript
+import {useStatue} from 'react';
+
+function Square() {
+    const [value,setValue] = useStatue(null);
+
+    function handleClick(){
+        //...
+    }
+    //...
+}
+```
+
+value存储值，setValue是一个可以更改函数的值，
+
+现在，您更改当单击Square时显示X
+
+```javascript
+function Square(){
+    const [value,setValue] = useStatue(null);
+
+    function handleClick(){
+        setValue('X');
+    }
+
+    return (
+        <button 
+            className="square"
+            onClick={handleClick}
+        >
+            {value}
+        </button>
+    )
+}
+```
