feat(main): 添加Go语言SPA处理逻辑并更新前端路由配置

--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -218,3 +218,29 @@ function Square(){
     )
 }
 ```
+
+### 提升状态
+目前，每个Square单独维护自己的状态，为了检查游戏中的获胜者，Board需要以某种方式了解9个Square组件中每个组件的状态
+
+你可能会猜测Board询问每个Square的状态，尽管这种在React上面是可行的，但我们不鼓励，因为会让代码变得难以理解，容易出错并且难以重构。
+
+相反，最好的方法是将游戏状态存在父Board中，而不是每个Square中，Board可以传递一个prop告诉每个Square要显示什么
+
+
+要从多个子组件收集数据，或者让两个子组件之间相互通信，请在父组件中声明共享状态，父组件可以通过props将该状态传递会子组件中，使得
+子组件之间和父组件保持同步
+
+当React被重构时，将状态提升到父组件是很常见的
+
+我们趁这个机会尝试一下
+```js
+export default function Board(){
+    const [squares, setSquares] = useState(Array(9).fill(null))
+    return (
+        //...
+    );
+}
+
+```
+
+Array(9).fill(null)
