尝试看react文档时产生的新思路

--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -243,4 +243,33 @@ export default function Board(){
 
 ```
 
-Array(9).fill(null)
+当你稍后填充棋盘是,会得到以下的squares数组
+```
+['O',null,'X','X','X','O','O',null]
+```
+
+```js
+export default function Board() {
+    const [squares,setSquares] = useState(Array(9).fill('X'));
+    return (
+        <>
+            <div className="board-row">
+                <Square value={squares[0]} />
+                <Square value={squares[1]} />
+                <Square value={squares[2]} />
+            </div>
+            <div className="board-row">
+                <Square value={squares[3]} />
+                <Square value={squares[4]} />
+                <Square value={squares[5]} />
+            </div>
+            <div className="board-row">
+                <Square value={squares[6]} />
+                <Square value={squares[7]} />
+                <Square value={squares[8]} />
+            </div>
+            
+        </>
+    )
+}
+```
