修正直接调用handleClick导致无限循环的问题

--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -273,3 +273,17 @@ export default function Board() {
     )
 }
 ```
+
+接下来，您将尝试将i传递给handleClick，你尝试直接在JSX中将square的onSquareClick属性设置为handleClick(0) 如下所示，不起作用
+```javascript
+<Square value={squares[0] onSquareClick={handleClick(0)}}/>
+```
+会报错
+```
+Error: Too many re-renders. React limits the number of renders to prevent an infinite loop.
+```
+这是为什么不起作用的原因。handleClick(0)调用渲染组件的一部分，因为handleClick(0)通过调用setSquares该变了棋盘组件的状态，
+所以整个棋盘组会将再次渲染。但这次运行handleClick(0), 导致无限循环
+
+为什么没有早点发生？
+当你传递`onSquareClick={handleClick}` 时，您将`handleClick` 函数作为prop向下传递，您没有叫他，
