--- a/web/doc/05哪里出了问题.md
+++ b/web/doc/05哪里出了问题.md
@@ -83,3 +83,37 @@ let App = function Board(){
     )
 }
 ```
+
+# ()=>handleClick 是什么意思
+`()=>handleClick(0)` 是一个箭头函数（Arrow Function）,用于创建一个匿名函数并传递参数
+
+1. 箭头函数的基础
+箭头函数是一种简写的函数表达式，语法为`()`或参数名`=>`函数体，他的主要作用是创建一个函数
+
+```javascript
+// 普通函数表达式
+function example() {
+  console.log('Hello');
+}
+
+// 等价的函数箭头
+const example = () => {
+  console.log('Hello')
+}
+
+```
+
+2. 函数传递与参数绑定
+在React中，通常需要将事件处理函数传递给组件中的某个元素（如`button`）。直接传递
+带参数的函数会立即执行，而不是在事件发生时执行，因此我们需要用箭头函数延迟函数的执行
+
+例如
+```javascript
+<button onClick={handleClick(0)}/>
+```
+上面的代码会立即执行`handleClick(0)`, 而不是在按钮被点击时执行。
+
+为了防止这种情况，通常用函数箭头将函数调用延迟到事件发生时
+```javascript
+<button onClick={() => handleClick(0)}/> 
+```
