添加玩家轮流机制

--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -287,3 +287,25 @@ Error: Too many re-renders. React limits the number of renders to prevent an inf
 
 为什么没有早点发生？
 当你传递`onSquareClick={handleClick}` 时，您将`handleClick` 函数作为prop向下传递，您没有叫他，
+
+### 轮流
+通过加一个新的状态xIsNext我们可以知道每次下的是什么样
+
+```javascript
+const[squares,setSquares] = useState(Array(9).fill(null));
+const[xIsNext,setXIsNext] = useState(true)
+
+
+const handleClick = (index) => {
+    const newSquares = squares.slice();
+    if (xIsNext) {
+    newSquares[index] = 'X'
+    setXIsNext(false)
+    } else {
+    newSquares[index] = 'Z'
+    setXIsNext(true)
+    }
+    
+    setSquares(newSquares);
+}
+```
