防止重复点击已填写的方块格子

--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -309,3 +309,24 @@ const handleClick = (index) => {
     setSquares(newSquares);
 }
 ```
+
+防止重复点击已填写的方块格子
+```javascript
+    const handleClick = (index) => {
+      // 防止重复点击已填写的方块格子
+      if (squares[index] != null) {
+        return
+      }
+
+      const newSquares = squares.slice();
+      if (xIsNext) {
+        newSquares[index] = 'X'
+        setXIsNext(false)
+      } else {
+        newSquares[index] = 'Z'
+        setXIsNext(true)
+      }
+      
+      setSquares(newSquares);
+    }
+```
