--- a/web/doc/04井字棋.md
+++ b/web/doc/04井字棋.md
@@ -330,3 +330,93 @@ const handleClick = (index) => {
       setSquares(newSquares);
     }
 ```
+
+重构一下setXIsNext的逻辑
+```javascript
+const handleClick = (index) => {
+    // 防止重复点击已填写的方块格子
+    if (squares[index] != null) {
+        return
+    }
+
+    const newSquares = squares.slice();
+    if (xIsNext) {
+        newSquares[index] = 'X'
+    } else {
+        newSquares[index] = 'O'
+    }
+    
+    setSquares(newSquares);
+    setXIsNext(!xIsNext)
+}
+```
+
+### 检查获胜的逻辑
+```javascript
+function Square({value,onclick}){
+    return <button className="square" onClick={onclick}>{value}</button>
+}
+
+function calculateWinner(squares) {
+      const lines = [
+        [0,1,2],
+        [3,4,5],
+        [6,7,8],
+        [0,3,6],
+        [1,4,7],
+        [2,5,8],
+        [0,4,8],
+        [2,4,6]
+      ];
+
+      for(let i= 0; i<lines.length;i++){
+        const [a,b,c] = lines[i]
+        if (squares[a] && squares[a]===squares[b] && squares[a]===squares[c]){
+          return squares[a];
+        }
+      }
+      return null;
+    }
+
+let App = function Board(){
+    const[squares,setSquares] = useState(Array(9).fill(null));
+    const[xIsNext,setXIsNext] = useState(true)
+
+    const handleClick = (index) => {
+      // 防止重复点击已填写的方块格子，当有人获胜也无法点击格子
+      if (squares[index] != null || calculateWinner(squares)) {
+        return
+      }
+
+      const newSquares = squares.slice();
+      if (xIsNext) {
+        newSquares[index] = 'X'
+      } else {
+        newSquares[index] = 'O'
+      }
+      
+      setSquares(newSquares);
+      setXIsNext(!xIsNext)
+    }
+
+    return(
+        <>
+            <div className="board-row">
+              <Square value={squares[0]} onclick={()=>handleClick(0)}/>
+              <Square value={squares[1]} onclick={()=>handleClick(1)}/>
+              <Square value={squares[2]} onclick={()=>handleClick(2)}/>
+            </div>
+            <div className="board-row">
+              <Square value={squares[3]} onclick={()=>{handleClick(3)}}/>
+              <Square value={squares[4]} onclick={()=>{handleClick(4)}}/>
+              <Square value={squares[5]} onclick={()=>{handleClick(5)}}/>
+            </div>
+            <div className="board-row">
+              <Square value={squares[6]} onclick={()=>{handleClick(6)}}/>
+              <Square value={squares[7]} onclick={()=>{handleClick(7)}}/>
+              <Square value={squares[8]} onclick={()=>{handleClick(8)}}/>
+            </div>
+        </>
+    )
+}
+```
